2012-10-02  Jeremy Cribb <jcribb@email.unc.edu>
	* pan_load_metadata.m: added a logentry that reports which wells are removed.

2012-10-02  Jeremy Cribb <jcribb@email.unc.edu>
	* pan_MCU2um.m: removed whitespaces.
	* pan_load_metadata.m: removed wells that are in channel 4 since camera is out (temporary).

2012-09-27  Jeremy Cribb <jcribb@email.unc.edu>
	* pan_MCU2um.m: added case of '-1' MCU parameter for testing code when no MCU parameters are known.  also added faux MCU parameter conversion factor for MCU of '0'.  This needs to be changed for the real value once it's determined.
	* pan_load_metadata.m: added error message for case where there are no tracking (vrpn.mat) or evt files to analyze.

2012-09-20  Jeremy Cribb <jcribb@email.unc.edu>
	* pan_analyze_CellExpt.m:  added 'panoptes' 'monoptes' system id.
	* pan_analyze_PMExpt.m: same.
	* pan_analyze_combine_data.m: same.
	* pan_load_metadata.m: same.
	* pan_process_PMExpt.m: same.

2011-10-10  Jeremy Cribb <jcribb@email.unc.edu>
	* pan_publish_PM.m: Switched to viscosity as reported value instead of RMS displacement.

2011-10-09  Jeremy Cribb <jcribb@email.unc.edu>
	* pan_analyze_PMExpt.m:  removed filter specs to pan_process_PMExpt.m
	* pan_process_PMExpt.m:  added filter specs and set new filters.
	* pan_publish_PMExpt.m:   updated output to html reporting code.
	* pan_publish_CellExpt.m:  Cosmetic changes to text.

2011-10-05  Jeremy Cribb <jcribb@email.unc.edu>
	* pan_analyze_CellExpt.m:  renamed 'filemask' variable to 'filepath'
	* pan_process_CellExpt.m:  cosmetic changes to code.
	* pan_sim_newt_run.m:  set default 'microns to pixel' conversion to 0.171 um/pixel, equivalent to a (current) varioptic setting of 50.
	* pan_analyze_PMExpt.m:  added.  contains analysis protocol for Passive Microrheology Experiment type
	* pan_process_PMExpt.m:  added.  Analyses, reports, and publishes results for the "Passive Microrheology Experiment" specified for Panoptes..	