@@ -31,10 +31,11 @@ filt.min_pixels = 0;
 filt.max_pixels = Inf;
 filt.xycrop     = 0;
 filt.xyzunits   = 'pixels';
-filt.dead_spots = [492 128 30 30 ; ...
-                   184 359 30 30 ; ...
-                   499 319 30 30 ; ...
-                   216 149 30 30 ];    % flea2 camera deadspots on 2011/10/07
+% filt.dead_spots = [492 128 30 30 ; ...
+%                    184 359 30 30 ; ...
+%                    499 319 30 30 ; ...
+%                    216 149 30 30 ];    % flea2 camera deadspots on 2011/10/07
+filt.dead_spots = [0 0 0 0];
 filt.drift_method = 'center-of-mass';
 
 
